# AI_Projects

RAG_ANALYTICS_ASSISTANT/: .dockerignore  .env.example  Dockerfile  FINDINGS.md  LEARNING.md  api_server.py  docker-compose.yml  ingest.py  main.py  pyproject.toml  rag_analytics.db  requirements.txt
RAG_ANALYTICS_ASSISTANT/Phase_Description/: LEARNINGS.md
RAG_ANALYTICS_ASSISTANT/Phase_Description/docs/phases/: README.md  phase_01_project_setup.md  (+8 more)
RAG_ANALYTICS_ASSISTANT/app/api/: middleware.py  routes.py
RAG_ANALYTICS_ASSISTANT/app/config/: settings.py
RAG_ANALYTICS_ASSISTANT/app/generation/: llm_client.py  prompt.py
RAG_ANALYTICS_ASSISTANT/app/guardrails/: input_guard.py  validator.py
RAG_ANALYTICS_ASSISTANT/app/hitl/: agent_prompt.py  jira_client.py  trigger.py
RAG_ANALYTICS_ASSISTANT/app/ingestion/: chunker.py  embedder.py  loader.py
RAG_ANALYTICS_ASSISTANT/app/retrieval/: retriever.py
RAG_ANALYTICS_ASSISTANT/app/store/: vector_store.py
RAG_ANALYTICS_ASSISTANT/app/utils/: cost_tracker.py  db.py  logger.py  session_store.py
RAG_ANALYTICS_ASSISTANT/chroma_db/: chroma.sqlite3
RAG_ANALYTICS_ASSISTANT/docs/: discount_policy.txt  docs_README.md  kpi_definitions.txt  regional_strategy_apac.txt  regional_strategy_emea.txt  sales_playbook.txt
RAG_ANALYTICS_ASSISTANT/eval/: eval_dataset.json  retrieval_test.py
RAG_ANALYTICS_ASSISTANT/frontend/: app.js  case_card.js  index.html  style.css
RAG_ANALYTICS_ASSISTANT/tests/: test_agent_prompt.py  test_api.py  test_generation.py  test_hitl_api.py  test_ingestion.py  test_jira_client.py  test_trigger.py
(+75 files in other folders)
